--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@capacitor/android": "^6.2.0",
+    "@capacitor/cli": "^6.2.0",
+    "@capacitor/core": "^6.2.0",
     "json-server": "^1.0.0-beta.3",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
